Fixing overlap the footer when try new transaction

--- a/style.css
+++ b/style.css
@@ -290,6 +290,8 @@ footer {
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
     opacity: 0.7;
+    position: relative;
+    z-index: -1;
 }
 
 /* Responsive ----------------------------------------*/
